Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.14.0
-
None
-
Ubuntu 20.04
-
-
5e1f40a3afbaf829a48bb6fbef342cb9b0615663 (qt-creator/qt-creator/4.15)
Description
Summary:
Installed Qt 5.15.2 and Qt Creator 4.14.0. Using Qt Creator to compile any code that requires Qt 5.15 causes error:
/usr/lib/x86_64-linux-gnu/libQt5Core.so.5: version `Qt_5.15' not found (required by /opt/Qt/5.15.2/gcc_64/lib/libQt5WebEngine.so.5)
Steps to reproduce:
- Install Qt 5.15.2 in Linux using .run online installer with default path and basic installation. Not uninstalling default Qt version 5.12 from Ubuntu 20.04.
- Run qtcreator.sh in /opt/Qt/Tools/QtCreator/bin so it sets the LD_LIBRARY_PATH and runs QtCreator
- Load a project that requires Qt 5.15. (loading from a CMakeList.txt)
- Configure project and set it to use Qt 5.15 located in the standard path: /opt/Qt/5.15.2/gcc_64/bin/qmake
- Build and run the project. The build finishes and the progress bar gets green. However, the compiled program doesn't launch and the application output shows:
/usr/lib/x86_64-linux-gnu/libQt5Core.so.5: version `Qt_5.15' not found (required by /opt/Qt/5.15.2/gcc_64/lib/libQt5WebEngine.so.5)
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-24806 When adding library paths from a cmake project, then the one containing Qt should be first to avoid it finding Qt in a different location due to it finding dependent libraries
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-25292 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
337791,2 | CMake: Don't add standard Linux paths to LD_LIBRARY_PATH | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |